objects/tffa__FieldRedactionConfiguration__mdt.object
<CustomObject>
    <description>Will contain configuration for redacting fields</description>
    <fields>
        <fullName>tffa__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether the redaction config is enabled</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__FieldName__c</fullName>
        <description>The Field name as identified by the system</description>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ObjectName__c</fullName>
        <description>The object name as identified by the system</description>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field Redaction Configuration</label>
    <pluralLabel>Field Redaction Configurations</pluralLabel>
</CustomObject>